updated TODO, fixed scrollbar always on for contact page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -189,7 +189,7 @@ form {
 
 	height: 60%;
 	margin-top: 7%;
-	margin-bottom: 5%;
+	margin-bottom: 4.5%;
 }
 
 /**** FORM ERRORS ****/
